tuna, espresso: disable OMAPLFB, enable SW_SYNC
As per the new DDK KM requirements.

Change-Id: I7976b0685fb50226224a54f0566a91613bac198d

--- a/arch/arm/configs/espresso_kitkat_defconfig
+++ b/arch/arm/configs/espresso_kitkat_defconfig
@@ -202,6 +202,7 @@ CONFIG_CFG80211=y
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
 CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
@@ -304,7 +305,6 @@ CONFIG_OMAP2_VRAM_SIZE=16
 CONFIG_FB_OMAP2=y
 CONFIG_FB_OMAP2_NUM_FBS=2
 CONFIG_PANEL_LTN=y
-CONFIG_OMAPLFB=m
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
