--- a/arch/arm/configs/tuna_kitkat_defconfig
+++ b/arch/arm/configs/tuna_kitkat_defconfig
@@ -213,6 +213,7 @@ CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
 CONFIG_CMA=y
 CONFIG_MTD=y
 CONFIG_MTD_CHAR=y
@@ -327,7 +328,6 @@ CONFIG_FB_OMAP2=y
 CONFIG_FB_OMAP2_NUM_FBS=2
 CONFIG_PANEL_S6E8AA0=y
 CONFIG_OMAP4_HDCP=y
-CONFIG_OMAPLFB=m
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
