--- a/arch/arm/configs/espresso_defconfig
+++ b/arch/arm/configs/espresso_defconfig
@@ -316,7 +316,7 @@ CONFIG_DISPLAY_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
-CONFIG_SND_USB_AUDIO=y
+CONFIG_SND_USB_AUDIO=n
 CONFIG_SND_SOC=y
 CONFIG_SND_OMAP_SOC=y
 CONFIG_SND_OMAP_SOC_ESPRESSO=y
