--- a/arch/arm/configs/espresso_defconfig
+++ b/arch/arm/configs/espresso_defconfig
@@ -61,7 +61,7 @@ CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_ZSMALLOC=y
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
-CONFIG_CMDLINE="androidboot.hardware=espresso"
+CONFIG_CMDLINE="vmalloc=496M omap-cpufreq.safe_suspend_freq=600000000 omap_wdt.timer_margin=30 androidboot.hardware=espresso enforcing=0 androidboot.selinux=permissive"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
