espresso_defconfig: don't load BCMDHD driver as a module.
Change-Id: I94feef7393194a6781adf203ee8583529757d471

--- a/arch/arm/configs/espresso_defconfig
+++ b/arch/arm/configs/espresso_defconfig
@@ -234,7 +234,7 @@ CONFIG_IFB=y
 CONFIG_DUMMY=y
 CONFIG_TUN=y
 CONFIG_WIFI_CONTROL_FUNC=y
-CONFIG_BCMDHD=m
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_DHD_USE_SCHED_SCAN=y
